# conductor

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  agent-orchestrator.yaml
docs/: ADR.md  PRD.md  README.md  conductor-architecture.md  mvp-test-plan.md
docs/adrs/: 0001-eight-slot-plugin-architecture.md  0001-session-lifecycle-engine-review-1-codex.md  0001-session-lifecycle-engine-review-1-gemini.md  0001-session-lifecycle-engine.md  0002-implementation-language.md  0003-configuration-system-review-1-gemini.md  0003-configuration-system.md  0004-event-driven-lifecycle-polling.md  0004-plugin-system-agent-runtime-review-1-codex.md  0004-plugin-system-agent-runtime-review-2-codex.md  0004-plugin-system-agent-runtime.md  0005-rule-based-automated-reactions.md  0005-workspace-session-metadata-review-1-codex.md  0005-workspace-session-metadata-review-2-codex.md  0005-workspace-session-metadata-review-2-gemini.md  0005-workspace-session-metadata.md  0006-tracker-integration.md  0007-cli.md  0008-prompt-system.md  0009-autonomous-reactions-and-scheduling.md  0010-orchestrator-as-session.md  README.md
docs/infographics/: Graph-driven state machine design.html
docs/plans/: 2026-03-05-adr-generation-design.md  2026-03-05-adr-generation-plan.md  2026-03-06-configuration-system-design.md  2026-03-06-configuration-system-plan.md  2026-03-06-implementation-language-design.md  2026-03-06-plugin-system-agent-runtime-design.md  2026-03-06-session-lifecycle-engine-design.md  2026-03-06-session-lifecycle-engine-plan.md  2026-03-07-cli-design.md  (+8 more)
(+38 files in other folders)
