[workspace]
members = ["packages/core", "packages/cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tera = "1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
dirs = "5"
garde = { version = "0.18", features = ["derive", "full"] }
shellexpand = "3"
